[package]
name = "rust-async-tuyapi"
version = "0.8.1"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>", "Rasmus Lövegren <rasmus@lovegren.fi>"]
edition = "2018"
description = "This package is a rust port of the exellent NodeJS implementation by codetheweb for the Tuya API, adapted for async usage"
homepage = "https://github.com/FruitieX/rust-async-tuyapi"
repository = "https://github.com/FruitieX/rust-async-tuyapi"
license-file = "LICENSE"
keywords = ["tuya", "smarthome", "smartlife"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
base64 = "0.13"
hex = "0.4"
json = "0.12"
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
nom = "7.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
aes = "0.7.5"
block-modes = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["io-util", "net"] }
